  on the project-download url. 	
- Integrate makemkv 1.6.3 32 bit into setup.sh 
- Integrate makemkv 1.6.3 64 bit into setup.sh
- Replace vobcopy with dvdbackup inside setup.sh
- Tested dvd-vcopy.sh successfully 
- Integrate test into shell-scripts that no other script is running.

Fixes: 

- Typo inside german description addon.xml
- Fixed ugly bug with dvd-vcopy.sh and dvd volume-names 
  that have spaces inside the name (fixed and tested)
- Typo inside setup.sh fixed for 32 makemkv (thanks to Chip2786)
- Before we exit the script we have to be sure that thread2 is not 
  longer running.
- Variable JOBFILE was wrong insid dvd-iso.sh
- Error inside dvd-vcopy.sh on line 274
- Addon needs release 35650 of xbmc 
- Fixed GUINotification inside default.py
- Dharma is Revision R35648 and not R35650
- In the case that ssh-server was not configured properly the busy 
  dialog was not killed.


----------------------------------------------------------------------------------------------------
Date : 01.02.2011 | Release : 0.6.18    | Author  : H.Weber | CVS:450-451
----------------------------------------------------------------------------------------------------

Changes:

- After a few changes I decided to rename this release as 0.6.16 Beta 3
- Create svn branch 0.6.18
- Setup-file for 0.6.18

----------------------------------------------------------------------------------------------------
Date : 01.03.2011 | Release : 0.6.19    | Author  : H.Weber | CVS:454
----------------------------------------------------------------------------------------------------

Changes:

- Initial-Work for release named "Avatar"
- changes for release 0.6.19 inside setup.sh 

Fixes:

- verbose-mode logging had a failure inside osrun
- Inside bluray-transcode.sh and dvd-mkv.sh was a failure that occur after a succesfull operation
  the destination file was not renamed properly.
- If rename we should also include a extension (fix for above fix)




